@@ -1,7 +1,11 @@
 include README.md LICENSE
 
+prune tasks
+
 recursive-include docs *
-prune docs/_userdoc
+prune docs/userdoc
 prune docs/coverage
 prune docs/gcov
-exclude docs/DEVELOPMENT.md docs/userdoc/.buildinfo
+prune docs/_userdoc/_build/
+exclude docs/_userdoc/website_download*
+exclude docs/DEVELOPMENT.md
