@@ -16,3 +16,4 @@ flake8 == 3.7.7
 invoke == 1.2.0
 
 Sphinx == 2.1.0
+sphinx_rtd_theme
