@@ -8,7 +8,7 @@
     border: 1px solid #CCC;
 }
 
-.gensaschema {
+.ci {
     font-variant: small-caps;
     font-family: serif;
     font-style: normal;
