@@ -1,2 +1,0 @@
-{% extends "classic/layout.html" %}
-{% set css_files = css_files + ['_static/gensaschema.css'] %}
