@@ -25,6 +25,11 @@ extensions = [
     'sphinx.ext.autodoc',
 ]
 
+
+def setup(app):
+    app.add_stylesheet('ci.css')
+
+
 # Add any paths that contain templates here, relative to this directory.
 templates_path = ['_templates']
 
@@ -38,17 +43,17 @@ source_suffix = '.txt'
 master_doc = 'index'
 
 # General information about the project.
-project = u'GenSASchema'
-copyright = u'2015 - 2019 Andr\xe9 Malo'
+project = 'GenSASchema'
+copyright = '2015 - 2019 Andr\xe9 Malo'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
 # built documents.
 #
 # The short X.Y version.
-version = u'0.6'
+version = '0.6'
 # The full version, including alpha/beta/rc tags.
-release = u'0.6.3'
+release = '0.6.3'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
@@ -90,12 +95,12 @@ pygments_style = 'sphinx'
 
 rst_prolog = """
 .. role:: product(emphasis)
-    :class: gensaschema
+    :class: ci
 
 .. |GenSASchema| replace:: :product:`GenSASchema`
 
 .. role:: productb(strong)
-    :class: gensaschema
+    :class: ci
 
 .. |**genSASchema**| replace:: :productb:`GenSASchema`
 """
@@ -104,27 +109,32 @@ rst_prolog = """
 
 # The theme to use for HTML and HTML Help pages.  Major themes that come with
 # Sphinx are currently 'default' and 'sphinxdoc'.
-html_theme = 'default'
+html_theme = "sphinx_rtd_theme"
+html_theme_options = dict(
+    collapse_navigation=False,
+    includehidden=True,
+)
 
-# Theme options are theme-specific and customize the look and feel of a theme
-# further.  For a list of options available for each theme, see the
-# documentation.
-if html_theme == 'nature':
-    html_theme_options = {}
-elif html_theme == 'agogo':
-    html_theme_options = dict(
-        pagewidth='100%',
-        documentwidth='80%',
-        sidebarwidth='20%',
-    )
-elif html_theme == 'scrolls':
-    html_theme_options = {}
-elif html_theme == 'haiku':
-    html_theme_options = {}
-else:
-    html_theme_options = dict(
-        rightsidebar=True,
-    )
+# # Theme options are theme-specific and customize the look and feel of a theme
+# # further.  For a list of options available for each theme, see the
+# # documentation.
+# if html_theme == 'nature':
+#     html_theme_options = {}
+# elif html_theme == 'agogo':
+#     html_theme_options = dict(
+#         pagewidth='100%',
+#         documentwidth='80%',
+#         sidebarwidth='20%',
+#     )
+# elif html_theme == 'scrolls':
+#     html_theme_options = {}
+# elif html_theme == 'haiku':
+#     html_theme_options = {}
+# else:
+#     html_theme_options = dict(
+#         rightsidebar=True,
+#     )
+
 
 # Add any paths that contain custom themes here, relative to this directory.
 #html_theme_path = []
@@ -200,8 +210,8 @@ htmlhelp_basename = 'GenSASchemadoc'
 # Grouping the document tree into LaTeX files. List of tuples
 # (source start file, target name, title, author, documentclass [howto/manual]).
 latex_documents = [
-  ('index', 'gensaschema.tex', u'GenSASchema Documentation',
-   u'Andr\xe9 "nd" Malo', 'manual'),
+  ('index', 'gensaschema.tex', 'GenSASchema Documentation',
+   'Andr\xe9 "nd" Malo', 'manual'),
 ]
 
 # The name of an image file (relative to this directory) to place at the top of
