@@ -1,6 +1,15 @@
 Download
 ~~~~~~~~
 
+Change Log
+----------
+
+- `CHANGES file <http://storage.perlig.de/gensaschema/CHANGES-@@VERSION@@>`_
+
+
+Source Packages
+---------------
+
 .. begin stable
 
 Current Stable Version
