@@ -5,6 +5,8 @@ Compile tasks
 
 """
 
+import os as _os
+
 import invoke as _invoke
 
 
@@ -12,4 +14,5 @@ import invoke as _invoke
 def compile(ctx):  # pylint: disable = redefined-builtin
     """ Compile the package """
     with ctx.shell.root_dir():
-        ctx.run('pip install -e .')
+        ctx.run('pip install -e .',
+                env=dict(_os.environ, SETUP_CEXT_REQUIRED="1"))
